z-index correction

--- a/style.css
+++ b/style.css
@@ -746,6 +746,7 @@ input[name='panel']:checked ~ .accordion-content {
 
 .pic-content-clic {
 	left: 0;
+	z-index: 2;
 }
 
 .pic-item h3 {
